Chamge docker-compose.ym;

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     image: mysql:8.0
     restart: always
     volumes:
-      - ./tmp/db:/var/lib/mysql
+      - mysql_data:/var/lib/mysql
     environment:
       MYSQL_DATABASE: store_db
       MYSQL_ROOT_PASSWORD: root
@@ -69,3 +69,5 @@ services:
       - "1025:1025"
       - "8025:8025"
 
+volumes:
+  mysql_data:
