--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,13 @@ services:
       context: ./_docker/nginx
       dockerfile: Dockerfile
     volumes:
-    - ./:/var/www
+      - ./:/var/www
+      - ./storage/app/product_images:/var/www/storage/app/product_images 
     environment:
       - "DB_HOST=mysql_db"
       - "XDG_CONFIG_HOME=/app"
     ports:
-    - "8080:80"
+      - "8080:80"
     links:
       - php-fpm
       - node
@@ -22,6 +23,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./:/var/www
+      - ./storage/app/product_images:/var/www/storage/app/product_images 
     environment:
       - "DB_HOST=mysql_db"
     links:
@@ -33,7 +35,8 @@ services:
       context: ./_docker/php-cli
       dockerfile: Dockerfile
     volumes:
-    - ./:/var/www
+      - ./:/var/www
+      - ./storage/app/product_images:/var/www/storage/app/product_images 
     environment:
       - "DB_HOST=mysql_db"
       - "COMPOSER_MEMORY_LIMIT=-1"
@@ -45,7 +48,7 @@ services:
     image: mysql:8.0
     restart: always
     volumes:
-      - ./tmp/db:/var/lib/mysql
+      - mysql_data:/var/lib/mysql
     environment:
       MYSQL_DATABASE: store_db
       MYSQL_ROOT_PASSWORD: root
@@ -58,7 +61,7 @@ services:
     ports:
         - "3000:3000"
     volumes:
-    - ./:/var/www
+      - ./:/var/www
     working_dir: /var/www
     tty: true
 
@@ -69,3 +72,5 @@ services:
       - "1025:1025"
       - "8025:8025"
 
+volumes:
+  mysql_data:
