--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,14 @@
         "php": "^8.1",
         "cviebrock/eloquent-sluggable": "^10.0",
         "guzzlehttp/guzzle": "^7.2",
+        "http-interop/http-factory-guzzle": "^1.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/scout": "^10.13",
+        "laravel/tinker": "^2.8",
+        "meilisearch/meilisearch-php": "^1.13",
+        "predis/predis": "^2.3",
+        "typesense/typesense-php": "^5.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
