--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/scout": "^10.13",
         "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.6",
         "meilisearch/meilisearch-php": "^1.13",
         "predis/predis": "^2.3",
         "typesense/typesense-php": "^5.0"
