Changing docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.2'
+version: '3.8'
 
 services:
   nginx:
@@ -7,15 +7,17 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./:/var/www
-      - ./storage/app/product_images:/var/www/storage/app/product_images 
+      - product_images:/var/www/storage/app/product_images
     environment:
       - "DB_HOST=mysql_db"
-      - "XDG_CONFIG_HOME=/app"
     ports:
       - "8080:80"
-    links:
+    depends_on:
       - php-fpm
-      - node
+      - mysql_db
+    networks:
+      - app-network
+
 
   php-fpm:
     build:
@@ -23,13 +25,16 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./:/var/www
-      - ./storage/app/product_images:/var/www/storage/app/product_images 
+      - product_images:/var/www/storage/app/product_images
     environment:
       - "DB_HOST=mysql_db"
-    links:
+    depends_on:
       - mysql_db
       - node
       - redis
+    networks:
+      - app-network
+
 
   php-cli:
     build:
@@ -37,14 +42,17 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./:/var/www
-      - ./storage/app/product_images:/var/www/storage/app/product_images 
+      - product_images:/var/www/storage/app/product_images
     environment:
       - "DB_HOST=mysql_db"
       - "COMPOSER_MEMORY_LIMIT=-1"
-    links:
+    depends_on:
       - mysql_db
       - redis
     tty: true
+    networks:
+      - app-network
+
 
   mysql_db:
     image: mysql:8.0
@@ -54,18 +62,25 @@ services:
     environment:
       MYSQL_DATABASE: store_db
       MYSQL_ROOT_PASSWORD: root
+      MYSQL_CHARSET: utf8
+      MYSQL_COLLATION: utf8_unicode_ci
     ports:
       - 8101:3306
-    command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
-    
+    networks:
+      - app-network
+
+
   node:
     image: node:18-alpine
     ports:
-        - "3000:3000"
+      - "3000:3000"
     volumes:
       - ./:/var/www
     working_dir: /var/www
     tty: true
+    networks:
+      - app-network
+
 
   mailpit:
     image: axllent/mailpit
@@ -73,31 +88,42 @@ services:
     ports:
       - "1025:1025"
       - "8025:8025"
+    networks:
+      - app-network
+
+  
+  redis:
+    image: redis:alpine
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+    restart: unless-stopped
+    networks:
+      - app-network
+
 
   meilisearch:
     image: getmeili/meilisearch:v1.13
     ports:
       - "7700:7700"
     environment:
-      MEILI_MASTER_KEY: I_K-pF9Sch-KZMf8B0PFJPjF3qFVut5nENzgh6PDt5w  # Ваш мастер-ключ
-      MEILI_ENV: production 
+      MEILI_MASTER_KEY: '${MEILISEARCH_KEY}'
     volumes:
       - meilisearch_data:/data.ms
-
-  redis:
-    image: redis:alpine
-    command: redis-server --requirepass 1234
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    environment:
-      - REDIS_PASSWORD=1234
-    restart: unless-stopped
     networks:
-      - default
+      - app-network
+
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   mysql_data:
   meilisearch_data:
   redis_data:
+  product_images:
