Chaning CartService and FavotitesService and changing other files

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "typesense/typesense-php": "^5.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.15",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
