--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./:/var/www
       - ./storage/app/product_images:/var/www/storage/app/product_images
+      - ./storage/app/user_avatar_images:/var/www/storage/app/user_avatar_images
     environment:
       - "DB_HOST=mysql_db"
     ports:
@@ -26,6 +27,7 @@ services:
     volumes:
       - ./:/var/www
       - ./storage/app/product_images:/var/www/storage/app/product_images
+      - ./storage/app/user_avatar_images:/var/www/storage/app/user_avatar_images
     environment:
       - "DB_HOST=mysql_db"
     depends_on:
@@ -43,6 +45,7 @@ services:
     volumes:
       - ./:/var/www
       - ./storage/app/product_images:/var/www/storage/app/product_images
+      - ./storage/app/user_avatar_images:/var/www/storage/app/user_avatar_images
     environment:
       - "DB_HOST=mysql_db"
       - "COMPOSER_MEMORY_LIMIT=-1"
@@ -127,3 +130,4 @@ volumes:
   meilisearch_data:
   redis_data:
   product_images:
+  user_avatar_images:
