add to docker-comopse Tuna Tunnel

--- a/.env
+++ b/.env
@@ -63,3 +63,6 @@ SCOUT_QUEUE=true
 SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=http://meilisearch:7700
 MEILISEARCH_KEY="K8s9pL2qR5tY7vXwZbNcMfDhGjJkLnPq"
+
+
+TUNA_TOKEN="tt_udvfxycuwd7ek9ec6f8xhkc77kizycpw"
