Make Order and YooKassa services

--- a/.env
+++ b/.env
@@ -64,5 +64,7 @@ SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=http://meilisearch:7700
 MEILISEARCH_KEY="K8s9pL2qR5tY7vXwZbNcMfDhGjJkLnPq"
 
-
 TUNA_TOKEN="tt_udvfxycuwd7ek9ec6f8xhkc77kizycpw"
+
+YOOKASSA_SHOP_ID="1058911"
+YOOKASSA_SECRET_KEY="test__02QPr-mUpI-Ncj2gJdF8jgoIkI3J22llACv1ganeZY"
