Create Cache for Category, Brand, Tag and crate Observers

--- a/.env
+++ b/.env
@@ -17,6 +17,7 @@ DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
+CACHE_PREFIX=cache
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=redis
 SESSION_DRIVER=redis
@@ -27,6 +28,7 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=redis
 REDIS_PASSWORD=1234
 REDIS_PORT=6379
+REDIS_PREFIX=online_store
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailpit
