--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,6 +97,7 @@ services:
   
   redis:
     image: redis:alpine
+    container_name: redis
     command: redis-server --requirepass ${REDIS_PASSWORD}
     ports:
       - "6379:6379"
@@ -111,6 +112,7 @@ services:
 
   meilisearch:
     image: getmeili/meilisearch:v1.13
+    container_name: meilisearch
     ports:
       - "7700:7700"
     environment:
