--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "livewire/livewire": "^3.6",
         "meilisearch/meilisearch-php": "^1.13",
         "predis/predis": "^2.3",
+        "tymon/jwt-auth": "^2.2",
         "typesense/typesense-php": "^5.0",
         "yoomoney/yookassa-sdk-php": "^3.8"
     },
