--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "cviebrock/eloquent-sluggable": "^10.0",
+        "doctrine/dbal": "^3.9",
         "guzzlehttp/guzzle": "^7.2",
         "http-interop/http-factory-guzzle": "^1.2",
         "laravel/framework": "^10.10",
@@ -15,6 +16,7 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.6",
         "meilisearch/meilisearch-php": "^1.13",
+        "orangehill/iseed": "^3.1",
         "predis/predis": "^2.3",
         "typesense/typesense-php": "^5.0",
         "yoomoney/yookassa-sdk-php": "^3.8"
